# fal-mcp-server

./: .actrc  .dockerignore  .env.example  .gitignore  .mcp.json  .secrets.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FINAL_SETUP.md  LICENSE  Makefile  README.md  SETUP_INSTRUCTIONS.txt  SUBMISSION.md  TEST_GUIDE.md  claude_config.json  docker-compose.yml  fal_mcp.py  mcp_server_simple.py  plugin.json  push_to_github.sh  pyproject.toml  requirements.txt  setup.sh  simple_server.py  smithery.json  test_apis.py  test_mcp_protocol.py  test_server.py  test_setup.py
.claude/: settings.json  startup-hook.sh
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  docker.yml  pages.yml  publish.yml  release.yml
.memory-bank/main/: startup-idioms-and-principles.md
docs/: DOCKER.md  Gemfile  HTTP_TRANSPORT.md  LOCAL_TESTING.md  _config.yml  api.md  docker.md  examples.md  full_server_code.md  index.md  installation.md  robots.txt
docs/_includes/: header.html  seo.html
docs/assets/: main.scss
docs/assets/css/: style.scss
examples/: basic_usage.py  claude_config_example.json
memory-bank/: active-context.md  ci-cd-workflow.md  development-practices.md  product-context.md  progress.md  release-checklist.md  testing-policy.md
src/fal_mcp_server/: __init__.py  model_registry.py  server.py  server_backup.py  server_basic.py  server_dual.py  server_http.py
src/fal_mcp_server/handlers/: __init__.py  audio_handlers.py  image_editing_handlers.py  image_handlers.py  utility_handlers.py  video_handlers.py
src/fal_mcp_server/queue/: __init__.py  base.py  handle_get.py  polling.py  subscribe.py
src/fal_mcp_server/tools/: __init__.py  audio_tools.py  image_editing_tools.py  image_tools.py  utility_tools.py  video_tools.py
submissions/: README.md  awesome-mcp-servers.md  modelcontextprotocol-servers.md
tests/: test_docker.py  test_docker_basic.py  test_docs.py  test_http_transport.py  test_image_editing.py  test_model_registry.py  test_server.py
